# RusTV

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  GUI_OVERVIEW.md  README.md  rustv.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
src/: config.rs  main.rs
src/birddog/: api.rs  mod.rs  ptz.rs
src/companion/: client.rs  mod.rs
src/gui/: app.rs  layouts.rs  mod.rs
src/matrix/: mod.rs  router.rs
src/ndi/: discovery.rs  mod.rs  receiver.rs  source.rs
